whitespace output fix with wikiwhitespace tag, css fixes, percent to points

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -645,12 +645,21 @@ select {
 }
 @media screen and (max-height: 880px) {
   .custom-input--percent .input-container {
-    right: 45px;
+    right: 60px;
     height: 20px;
   }
 }
 .custom-input--percent .input-container .icon {
-  display: block;
+  display: inline-block;
+  width: auto;
+  height: auto;
+  position: absolute;
+  right: -45px;
+  line-height: 2;
+  font-size: 12px;
+}
+.custom-input--percent .input-container .icon.icon--percent {
+  display: inline-block;
   width: 17px;
   height: 25px;
   position: absolute;
@@ -685,12 +694,12 @@ select {
   }
 }
 .custom-input--percent label {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.222;
 }
 @media screen and (max-height: 880px) {
   .custom-input--percent label {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
 .custom-input-accordian {
@@ -1310,10 +1319,22 @@ textarea {
 }
 .custom-input-grading__percent {
   text-align: right;
+  padding-right: 20px;
 }
 .custom-input-grading__percent h3 {
+  position: relative;
   display: inline block;
   width: auto;
+}
+.custom-input-grading__percent h3:before {
+  content: 'points';
+  color: #fff;
+  font-size: 12px;
+  vertical-align: middle;
+  position: absolute;
+  bottom: 5px;
+  left: 100%;
+  margin-left: 8px;
 }
 .custom-input-grading__percent.over-limit {
   color: #e36945;
@@ -1470,7 +1491,7 @@ textarea {
 .step-nav__button.inactive {
   cursor: default;
   color: rgba(255,255,225,0.25);
-  pointer-events: auto;
+  pointer-events: none;
 }
 .step-nav__button:first-child {
   border-right: 1px solid rgba(78,88,127,0.2);
