--- a/source/stylesheets/modules/_grading-step.styl
+++ b/source/stylesheets/modules/_grading-step.styl
@@ -22,10 +22,23 @@
     
   &__percent
     text-align right
+    padding-right 20px
     
     h3 
+      position relative
       display inline block
       width auto
+      
+      &:before
+        content 'points'
+        color white
+        font-size 12px
+        vertical-align: middle;
+        position: absolute;
+        bottom: 5px;
+        left: 100%;
+        margin-left: 8px;
+      
       
     &.over-limit
       color red
